--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="bg-accent">
 <div class="container">
-    <h1 class="text-primary">Typescript Express API</h1>
+    <h1 class="text-primary">Typescript Express API Micro Framework</h1>
     <p>static frontend (adjust path in .env)</p>
     <p class="font-lg">Jump start your API development</p>
     <p>
